--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
+    <div>
+        <div class="h">
+          <h1>Your Whislist</h1>
+        </div> 
+        <div class="h">
+            <input class="v" type="text" placeholder="add you are whislist here.."> 
+            <button class="b">Add</button>
+        </div> 
+        <div class="ren">
+
+        </div>
+    </div> 
+    <script src="./index.js"></script>
 </body>
 </html>
